@@ -111,39 +111,7 @@ gen_wifi_config()
     ralink_init make_wireless_config rt2860
 }
 
-setLanWan()
-{
-if [ "$CONFIG_RT_3052_ESW" = "y" ]; then
-    if [ "$wan_port" = "0" ]; then
-	    echo '##### config vlan partition (WLLLL) #####'
-	    config-vlan.sh $SWITCH_MODE WLLLL
-    else
-	    echo '##### config vlan partition (LLLLW) #####'
-	    config-vlan.sh $SWITCH_MODE LLLLW
-    fi
-	echo '######## clear switch mac table  ########'
-        switch clear
-fi
-}
-
-resetLanWan()
-{
-if [ "$CONFIG_RT_3052_ESW" = "y" ]; then
-    $LOG "Reinit power mode for all switch ports" #workaroud for dir-300NRU
-    config-vlan.sh 2 FFFFF
-    echo "##### restore to dump switch #####"
-    config-vlan.sh $SWITCH_MODE 0
-fi
-}
-
 case "$1" in
-	setLanWan)
-	    setLanWan
-	    ;;
-
-	resetLanWan)
-	    resetLanWan
-	    ;;
 
 	ra0flushadress)
 	    ra0flushadress
